syntax = "proto3";

package agglayer.storage.v0;

// Record of settlement transaction hashes for a certificate.
// Stores hashes in the order of insertion with automatic deduplication.
message SettlementTxRecord {
  // Settlement transaction hash history.
  // Optional to differentiate between empty history and missing history,
  // which allows for easier field deprecation in the future.
  TxHashHistory tx_history = 1;
}

// Transaction hash history wrapper.
message TxHashHistory {
  // Settlement transaction hashes, uniqued and in order of insertion.
  // Each hash represents a settlement transaction associated with a certificate.
  repeated SettlementTxHash hashes = 1;
}

// A settlement transaction hash.
message SettlementTxHash {
  bytes hash = 1;
}
